# ay_test

./: .gitignore
bash/: align_windows.sh  edit_root_file.sh  fileinfo.sh  find_cams.sh  func_test1.sh  git_clone_or_pull.sh  setup-lxd.sh
bash/tools/: ask-yes-no  avi2mpg  becho  chcode  chcode-d  chfilenamelower  chfilenamelower-r  conv-img  conv-video  conv-video2  copy_bash_env.tcsh  cpa  ej  eps2gray  epsmanip  eqlatex  fade-avi  findbrokenslinks  findgzip  findtextcompressor  gecho  ip_addr  lc  lcc  ls-brokenlink  midi2mp3  name-only-copy  numbering  numv  pdf-cmp  pdf2gray  pdfstamp  pdiff  ppm2jpg  ps2svg  qlatex  recho  reghost  rev-mspdf  rmblankf  (+10 more)
cmake/: style-rules.note
cmake/test1/: CMakeLists.txt  main.cpp  test.cpp  test.h
cmake/test2/: CMakeLists.txt
cmake/test3/: CMakeLists.txt
cmake/test3/bar/: CMakeLists.txt
cmake/test3/bar/include/bar/: bar1.h  bar2.h
cmake/test3/bar/src/: bar1.cpp  bar2.cpp
cmake/test3/demo/: CMakeLists.txt  demo1.cpp  demo2.cpp  demo3.cpp  demo4.cpp  textures
cmake/test3/foo/: CMakeLists.txt
cmake/test3/foo/include/foo/: foo1.h  foo2.h
cmake/test3/foo/src/: foo1.cpp  foo2.cpp
cmake/test4/: CMakeLists.txt
cmake/test4/demo1/: CMakeLists.txt  demo1.cpp
cmake/test4/demo2/: CMakeLists.txt  demo2.cpp
cpp/geometry/: data  gen_data.py  pca2.py  polygon_bb2.cpp  polygon_bb2.h  polygon_bb4.cpp  polygon_bb4.h  polygon_bb4_test.cpp  polygon_bb4_test.py  polygon_slice2.cpp  polygon_slice2.h  polygon_slice2_test.cpp  polygon_slice2_test.py  pypoly
cpp/marker-detection/: Makefile  Makefile-pt  Makefile-t  Makefile-t2  Makefile-tm  buffer.cpp  buffer.h  edgel.cpp  edgel.h  edgeldetector.cpp  edgeldetector.h  linesegment.cpp  linesegment.h  test-cv2.cpp  test-pt.cpp  test-tmpl.cpp  test.cpp  vector2f.h
cpp/misc/: abort.cpp  approx-nrand.cpp  base64-test.h  base64.cpp  binary-test.h  binary.cpp  binary2.cpp  bind-ref.cpp  bind2fptr.cpp  bool_to_int.cpp  boost-path.cpp  boost-path2.cpp  boost-path3.cpp  boost-shared-ptr.cpp  boost-ublas1.cpp  bubble-bfs.cpp  cast_int.cpp  char-flag.cpp  cin-c-by-c.cpp  copy-inherit.cpp.cpp  default-array-val.cpp  default-array-val2.cpp  float-to-str.cpp  forward-dec.cpp  friend-template.cpp  function_ptr.cpp  get-quaternion.cpp  has_include.cpp  if-int.cpp  ifstream.cpp  indent_string.cpp  init_array.cpp  insert_to_sorted.cpp  insert_to_sortedvec.cpp  interpolator.cpp  iomanip1.cpp  isnan_isinf.cpp  join_path.cpp  kbhit-test.cpp  kbhit.cpp  (+56 more)
cpp/serial/: serial-term.cpp
cpp/thread/: boost-th.cpp  mutex.cpp  mutex2.cpp  mutex3.cpp
cpp/time/: clock_gettime.cpp  current_time.cpp  current_time2.cpp  rate_adjust.cpp  rate_adjust2.cpp  rate_adjust3.cpp  time-test.cpp  time_cmp.cpp  usleep_crossplat.cpp
cpp/udp/: client1.cpp  server1.cpp
devices/cdio/: README.md  cdio.py  cont_io.py
devices/joystick/: test.c  test2.cpp
fortran/: avr1.f90  division1.cpp  division1.f90  enshu2_1.f90  enshu2_21.f90  enshu2_22.f90  enshu_1.f90  ex1_1.f90  ex1_2.f90  ex1_3.f90  ex1_4.f90  ex1_5.f90  ex2_1.f90  ex4_1.f90  ex4_2.f90  ex4_3.f90  ex4_4.f90  ex5_1.f90  ex5_2.f90  ex5_3.f90  ex5_4.f90  ex5a_1.f90  ex5a_2.f90  ex5a_3.f90  ex5a_x.f90  func1.f90  global1.f90  invalid_calc.f90  problem1_1.f90  subroutine1.f90  template.f90
octave/: circle_fit.m
opencv/cpp/: angled_rect_3d.cpp  auto-crop.cpp  background_subtr.cpp  background_subtr0.cpp  background_subtr_c.cpp  calcBackProj3.cpp  calcBackProj3s.cpp  calcBackProj4.cpp  calcBackProject_Demo2.cpp  calcHist_hsv.cpp  calcHist_rgb.cpp  calib_drawscale.cpp  calib_man.cpp  calib_stereo.cpp  calib_stereo_fs.cpp  calibration.cpp  calibration_fs.cpp  camera.yml  camshiftdemo.cpp  cap_open.h  capture.cpp  cma_es  color_curve_detection1.cpp  cv-type-gen.cpp  cv2-canny.cpp  cv2-cap-stream.cpp  cv2-capture.cpp  cv2-capture2.cpp  cv2-capture_fps.cpp  cv2-capture_fps2.cpp  cv2-capture_fps3.cpp  cv2-clone-vs-copyTo.cpp  cv2-convert.cpp  cv2-draw-fillpoly.cpp  cv2-draw-revpoly.cpp  cv2-draw.cpp  cv2-edge.cpp  cv2-edge_cmp.cpp  cv2-file_storage-kp.cpp  cv2-file_storage.cpp  (+162 more)
opencv/cpp_py_bind/: filter2d_test1.cpp  filter2d_test1_test.py  filter2d_test2.cpp  filter2d_test2_test.py
opencv/python/: cam_mat.py  (+46 more)
prolog/: KB1.pl  KB2.pl  KB3.pl  KB4.pl  cmb.pl  int_to_bin.pl  kbA.pl  kbB.pl  kbC.pl  kbD.pl  kbE.pl  kbF.pl  kbG.pl  kbH.pl  kbI.pl  kbJ.pl  kbK.pl  kbL.pl  kbM.pl  kbN.pl  lambda.pl  loop.pl  replace_array_elem.pl  search1.pl  search2.pl  search3.pl  search4.pl  search5.pl  search6.pl  socket2_cli.pl  socket2_srv.pl  socket_1.pl  socket_cli.pl  socket_srv.pl  socket_util.pl  split.pl  test01.pl
python/: change_shebang.py  file  statistics  template.py
python/openrave/test_ctrl/: CMakeLists.txt  plugindefs.h  testcontrollers.cpp  testcontrollers.h
ros/cpp_ros/ode1/: CMakeLists.txt  mainpage.dox  manifest.xml
ros/cpp_ros/ode1/config/textures/: sky.ppm
ros/cpp_ros/ode1/include/ode1/: arm7_door_push.h  gripper.h  joint_chain1.h
ros/cpp_ros/ode1/launch/: arm7_door_push.launch  gripper.launch  joint_chain1.launch
ros/cpp_ros/ode1/msg/: ODEConfig.msg  ODEConfig2.msg  ODEControl2.msg  ODESensor.msg  ODESensor2.msg  ODEViz.msg  ODEVizPrimitive.msg
ros/cpp_ros/ode1/scripts/: arm7dp_core.py  arm7dp_key.py  arm7dp_kin.py  geom_util.py  joint_chain1.py
ros/cpp_ros/ode1/src/: arm7_door_push.cpp  arm7_door_push_node.cpp  gripper.cpp  gripper_node.cpp  joint_chain1.cpp  joint_chain1_node.cpp
ros/cpp_ros/ode1/srv/: ODEGetConfig.srv  ODEGetConfig2.srv  ODEReset2.srv  ODESetConfig2.srv
ros/cpp_ros/test2/: CMakeLists.txt  mainpage.dox  manifest.xml
ros/cpp_ros/test2/src/: COMPILE.txt  segment_obj_simple1b.cpp  sub_img_node.cpp
ros2/rclcpp/src/ros2_test1/: CMakeLists.txt  README.md  package.xml
ros2/rclcpp/src/ros2_test1/include/ros2_test1/: cpp_action_client.hpp  cpp_listener_node.hpp  cpp_srv_client.hpp  cpp_talker_node.hpp
ros2/rclcpp/src/ros2_test1/src/: cpp_action_client.cpp  cpp_actionc_main.cpp  cpp_listener_main.cpp  cpp_listener_node.cpp  cpp_srv_client.cpp  cpp_srvc_main.cpp  cpp_talker_main.cpp  cpp_talker_node.cpp
sensors/: test_conf_cam.sh
(+1732 files in other folders)
